--- a/app/src/main/res/layout/activity_geo_map.xml
+++ b/app/src/main/res/layout/activity_geo_map.xml
@@ -6,13 +6,31 @@
     android:layout_height="match_parent"
     tools:context="com.example.richard.geomap.GeoMapActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/new_project_button"
+        android:layout_width="262dp"
+        android:layout_height="53dp"
+        android:text="New Project"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/open_project_button"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.686"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
+    <Button
+        android:id="@+id/open_project_button"
+        android:layout_width="261dp"
+        android:layout_height="48dp"
+        android:text="Open Project"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="193dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.504" />
 </android.support.constraint.ConstraintLayout>
