--- a/app/src/main/res/layout/open_project.xml
+++ b/app/src/main/res/layout/open_project.xml
@@ -7,14 +7,14 @@
     android:weightSum="1">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/map"
+        android:id="@+id/open_projects_map"
         android:layout_width="match_parent"
         android:layout_height="245dp"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_weight="0.56" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/select_project_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.12"
