--- a/app/src/main/res/layout/open_project.xml
+++ b/app/src/main/res/layout/open_project.xml
@@ -23,6 +23,7 @@
 
     <Button
         android:id="@+id/select_project_button"
+        android:onClick=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.03"
@@ -30,6 +31,7 @@
 
     <Button
         android:id="@+id/delete_project_button"
+        android:onClick=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.03"
