--- a/app/src/main/res/layout/new_project.xml
+++ b/app/src/main/res/layout/new_project.xml
@@ -26,8 +26,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/select_time" />
+                tools:layout_editor_absoluteY="268dp" />
 
             <Button
                 android:id="@+id/cancel_new_project_button"
@@ -55,30 +54,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/project_desc" />
-
-            <Button
-                android:id="@+id/select_time"
-                android:layout_width="354dp"
-                android:layout_height="55dp"
-                android:text="Select Time"
-                android:layout_marginRight="8dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="17dp"
-                app:layout_constraintTop_toBottomOf="@+id/select_date" />
-
-            <Button
-                android:id="@+id/select_date"
-                android:layout_width="354dp"
-                android:layout_height="55dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:text="Select Date"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="14dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
             <EditText
                 android:id="@+id/editText2"
