--- a/app/src/main/res/layout/project.xml
+++ b/app/src/main/res/layout/project.xml
@@ -13,10 +13,10 @@
         android:textSize="30sp" />
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/open_projects_map"
+        android:id="@+id/project_map"
+        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="245dp"
-        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_weight="0.14" />
 
     <Button
