--- a/app/src/main/res/layout/new_project.xml
+++ b/app/src/main/res/layout/new_project.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/NewProjectFragment"
+    class="com.example.richard.geomap.NewProjectFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,7 +27,8 @@
                 android:inputType="textMultiLine"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                tools:layout_editor_absoluteY="134dp" />
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
             <Button
                 android:id="@+id/cancel_new_project_button"
