--- a/app/src/main/res/layout/open_project.xml
+++ b/app/src/main/res/layout/open_project.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:id="@+id/OpenProjectFragment"
+    class="com.example.richard.geomap.OpenProjectFragment">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/open_projects_map"
