--- a/app/src/main/res/layout/new_project.xml
+++ b/app/src/main/res/layout/new_project.xml
@@ -27,23 +27,22 @@
                 android:inputType="textMultiLine"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText2" />
+                android:layout_marginTop="-4dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText2"
+                app:layout_constraintHorizontal_bias="1.0" />
 
             <Button
                 android:id="@+id/cancel_new_project_button"
                 android:layout_width="150dp"
                 android:layout_height="44dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="35dp"
                 android:layout_marginTop="8dp"
                 android:text="Cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintTop_toBottomOf="@+id/project_desc"
+                app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintLeft_toRightOf="@+id/save_new_project_button"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/project_desc" />
+                android:layout_marginLeft="8dp" />
 
             <Button
                 android:id="@+id/save_new_project_button"
