--- a/app/src/main/res/layout/new_location.xml
+++ b/app/src/main/res/layout/new_location.xml
@@ -97,7 +97,7 @@
                 android:text="Select Date"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText2" />
+                app:layout_constraintTop_toBottomOf="@+id/project_name_edit_text" />
 
             <TextView
                 android:id="@+id/textView7"
