--- a/app/src/main/res/layout/new_project.xml
+++ b/app/src/main/res/layout/new_project.xml
@@ -17,18 +17,18 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/project_desc"
+                android:id="@+id/project_desc_edit_text"
                 android:layout_width="370dp"
                 android:layout_height="147dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:ems="10"
                 android:hint="Project Description"
-                android:inputType="textMultiLine"
+                android:inputType="textMultiLine|textCapSentences"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="-4dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText2"
+                app:layout_constraintTop_toBottomOf="@+id/project_name_edit_text"
                 app:layout_constraintHorizontal_bias="1.0" />
 
             <Button
@@ -39,7 +39,7 @@
                 android:layout_marginTop="8dp"
                 android:text="Cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/project_desc"
+                app:layout_constraintTop_toBottomOf="@+id/project_desc_edit_text"
                 app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintLeft_toRightOf="@+id/save_new_project_button"
                 android:layout_marginLeft="8dp" />
@@ -54,10 +54,10 @@
                 android:text="Save"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/project_desc" />
+                app:layout_constraintTop_toBottomOf="@+id/project_desc_edit_text" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/project_name_edit_text"
                 android:layout_width="356dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="8dp"
@@ -65,7 +65,7 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:hint="Project Name"
-                android:inputType="textPersonName"
+                android:inputType="textCapWords"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
