--- a/app/src/main/res/layout/new_project.xml
+++ b/app/src/main/res/layout/new_project.xml
@@ -12,67 +12,15 @@
         android:layout_height="match_parent">
 
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/project_desc_edit_text"
-                android:layout_width="370dp"
-                android:layout_height="147dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:ems="10"
-                android:hint="Project Description"
-                android:inputType="textMultiLine|textCapSentences"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="-4dp"
-                app:layout_constraintTop_toBottomOf="@+id/project_name_edit_text"
-                app:layout_constraintHorizontal_bias="1.0" />
-
-            <Button
-                android:id="@+id/cancel_new_project_button"
-                android:layout_width="150dp"
-                android:layout_height="44dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Cancel"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/project_desc_edit_text"
-                app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintLeft_toRightOf="@+id/save_new_project_button"
-                android:layout_marginLeft="8dp" />
-
-            <Button
-                android:id="@+id/save_new_project_button"
-                android:layout_width="156dp"
-                android:layout_height="44dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="8dp"
-                android:text="Save"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/project_desc_edit_text" />
-
-            <EditText
-                android:id="@+id/project_name_edit_text"
-                android:layout_width="356dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:ems="10"
-                android:hint="Project Name"
-                android:inputType="textCapWords"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="346dp"
+                android:layout_width="match_parent"
                 android:layout_height="53dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -80,11 +28,48 @@
                 android:text="New Project"
                 android:textAlignment="center"
                 android:textSize="30sp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 tools:textColor="@android:color/black" />
 
-        </android.support.constraint.ConstraintLayout>
+            <EditText
+                android:id="@+id/project_name_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:hint="Project Name"
+                android:inputType="textCapWords" />
+
+            <EditText
+                android:id="@+id/project_desc_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="147dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="-4dp"
+                android:ems="10"
+                android:hint="Project Description"
+                android:inputType="textMultiLine|textCapSentences"/>
+
+            <Spinner
+                android:id="@+id/colors_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="0.74" />
+
+            <Button
+                android:id="@+id/save_new_project_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save" />
+
+            <Button
+                android:id="@+id/cancel_new_project_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cancel" />
+
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
