--- a/app/src/main/res/layout/project.xml
+++ b/app/src/main/res/layout/project.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/ProjectFragment"
+    class="com.example.richard.geomap.ProjectFragment">
 
     <TextView
         android:id="@+id/project_name"
@@ -26,7 +28,7 @@
         android:text="New Measurement" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/take_picture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Take Picture" />
